added functionality for twitter-api-v2
